# test-localize-superq

./: CMakeLists.txt  README.md
app/script/: test_localize_superq.xml.template  test_localize_superq.xml.temple
src/: idl.thrift  main.cpp
